# dbt-meta-context

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
eval/: design.md  extraction-quality.md  results.md
examples/: order_success_rate.yml
guides/: authoring.md  distillation-prompt.md  interview.md  sourcing.md
skills/authoring-meta-context/: SKILL.md
spec/: field-guide.md  known-gaps.md  osi-mapping.md  prior-art.md  schema.md
validator/: README.md  pyproject.toml
validator/meta_context_validator/: cli.py  rules.py
